fixed alignment and paddigs

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,12 +2,13 @@
   padding-top: 2rem;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-content: center;
   gap: 3rem;
   margin-bottom: 5rem;
   padding: 1rem;
-  margin-top: 3%;
+  justify-content: center;
+  justify-items: center;
+  height: 50vh;
 }
 
 .about {
