--- a/src/components/Links/Links.css
+++ b/src/components/Links/Links.css
@@ -1,8 +1,10 @@
 .links {
   display: flex;
   align-content: center;
+  align-items: center;
   justify-content: center;
-  margin-top: 1%;
+  justify-items: center;
+  height: 55vh;
 }
 .card-client {
   background: black;
