--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -39,34 +39,19 @@
   backface-visibility: hidden;
   border: 1px solid #80d7ff;
   border-radius: 1rem;
+  padding: 0.5rem 1rem;
+  box-sizing: border-box;
 }
 
 .flip-card-front {
-  /* background: linear-gradient(
-      120deg,
-      bisque 60%,
-      rgb(255, 231, 222) 88%,
-      rgb(255, 211, 195) 40%,
-      rgba(255, 127, 80, 0.603) 48%
-    );
-    */
   color: #80d7ff;
   background-image: linear-gradient(120deg, rgb(41, 42, 53), #375dc3);
 }
 
 .flip-card-back {
-  /* background: linear-gradient(
-      120deg,
-      rgb(255, 174, 145) 30%,
-      coral 88%,
-      bisque 40%,
-      rgb(255, 185, 160) 78%
-    ); */
   background-image: linear-gradient(120deg, #375dc3, #80d7ff);
   color: black;
   transform: rotateY(180deg);
-  padding: 0.5rem 1rem;
-  box-sizing: border-box;
 }
 
 .owner-name {
