--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -8,6 +8,7 @@
   gap: 2rem;
   padding: 0 1rem;
   margin-bottom: 5rem;
+  padding-bottom: 5rem;
 }
 
 .custom-loader {
